--- a/src/app/entrar-cadastro/entrar-cadastro.component.html
+++ b/src/app/entrar-cadastro/entrar-cadastro.component.html
@@ -1,115 +1,172 @@
 <div class="container fredoka">
-
-<div>
-  <h1 class="text-center mt-5">Minha <span>Conta</span></h1>
-</div>
-
-<div class="container-fluid">
-  <div class="row d-flex align-items-baseline ">
-
-    <!-- Entrar -->
-    <div class="col-md-6">
-      <div class="row d-flex justify-content-end mr-1">
-        <div class="col-md-8">
-
-          <p class="text-center">
-            Já tem cadastro? Entre aqui!
-          </p>
-
-          <h1 class="text-center">Entrar</h1>
-
-          <div class="form-group">
-
-            <label for="usuario"></label>
-            <input [(ngModel)]="usuarioLogin.usuario" class="form-control" type="text" name="usuario" id="usuario" placeholder="Email do Usuário">
-          </div>
-
-          <div class="form-group">
-            <label for="senha"></label>
-            <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha" placeholder="Senha">
-          </div>
-
-          <div class="d-flex justify-content-center mt-5 mb-5">
-            <button type="submit" class="btn btn-success" (click)="entrar()">Entrar</button>
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-    <!-- /Entrar -->
-
-    <!-- Cadastrar -->
-
-    <div class="col-md-6 mt-3">
-
-      <div class="row d-flex justify-content-start ml-1">
-        <div class="col-md-10">
-
-          <p class="text-center mt-5">
-            Ainda não se cadastrou? Comece por aqui!
-          </p>
-
-          <h1 class="text-center">Cadastro</h1>
-
-          <form>
-            <div class="form-row">
-              <div class="col mb-3">
-                <label for="nome"></label>
-                <input [(ngModel)]="usuario.nome" type="text" class="form-control" name="nome" id="nome" placeholder="Digite seu nome">
-              </div>
-              <div class="col">
-                <label for="usuario"></label>
-                <input [(ngModel)]="usuario.usuario" type="text" class="form-control" name="usuario" id="usuario" placeholder="Digite seu e-mail">
-              </div>
-            </div>
-
-            <div class="form-row">
-              <div class="col mb-3">
-                <label for="cpf"></label>
-                <input [(ngModel)]="usuario.cpf" type="text" class="form-control" name="cpf" id="cpf" placeholder="Insira o CPF ou CNPJ">
-              </div>
-              <div class="col">
-                <label for="tipo"></label>
-                <select (change)="tipoUser($event)" type="text" class="form-control" name="tipo" id="tipo">
-                  <option>Tipo do Usuário</option>
-                  <option value="vendedor">Vendedor(a)</option>
-                  <option value="comprador">Comprador(a)</option>
-                </select>
-              </div>
-            </div>
-
-            <div class="form-row">
-              <div class="col mb-3">
-                <label for="senha"></label>
-                <input (input)="confirmSenha($event)" type="password" class="form-control" name="senha" id="senha" placeholder="Digite sua senha">
-              </div>
-              <div class="col">
-                <label for="confirmSenha"></label>
-                <input [(ngModel)]="usuario.senha" type="password" class="form-control" name="confirmSenha" id="confirmSenha" placeholder="Confirme sua senha">
-              </div>
-            </div>
-
-          </form>
-
-          <div class="form-group">
-            <label for="foto"></label>
-            <input [(ngModel)]="usuario.foto" class="form-control" type="text" name="foto" id="foto" placeholder="Insira o link da sua foto">
-          </div>
-
-
-          <div class="d-flex justify-content-center mt-5 mb-5">
-            <button type="submit" class="btn btn-laranja mr-4" routerLink="/entrar">Cancelar</button>
-            <button type="submit" class="btn btn-verde" (click)="cadastrar()">Cadastrar</button>
-
-          </div>
-
-        </div>
-      </div>
-    </div>
-    <!-- /Cadastrar -->
-
+  <div>
+    <h1 class="text-center mt-5">Minha <span>Conta</span></h1>
   </div>
-</div>
+
+  <div class="container-fluid">
+    <div class="row d-flex align-items-center">
+      <!-- Entrar -->
+      <div class="col-md-6">
+        <div class="row d-flex justify-content-center mr-1">
+          <div class="col-md-8">
+            <h1 class="text-center">Entrar</h1>
+
+            <p class="text-center mt-3">Já tem cadastro? Entre aqui!</p>
+            <div class="form-group">
+              <label for="usuario"></label>
+              <input
+                [(ngModel)]="usuarioLogin.usuario"
+                class="form-control"
+                type="text"
+                name="usuario"
+                id="usuario"
+                placeholder="Email do Usuário"
+              />
+            </div>
+
+            <div class="form-group">
+              <label for="senha"></label>
+              <input
+                [(ngModel)]="usuarioLogin.senha"
+                class="form-control"
+                type="password"
+                name="senha"
+                id="senha"
+                placeholder="Senha"
+              />
+            </div>
+
+            <div class="d-flex justify-content-center mt-5 mb-5">
+              <button type="submit" class="btn btn-success" (click)="entrar()">
+                Entrar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Entrar -->
+
+
+      <!-- Cadastrar -->
+
+      <div class="col-md-6 mt-3">
+        <div class="row d-flex justify-content-center ml-1">
+          <div class="col-md-10">
+
+            <h1 class="text-center">Cadastro</h1>
+
+            <p class="text-center mt-3">
+              Ainda não se cadastrou? Comece por aqui!
+            </p>
+
+            <form>
+              <div class="form-row">
+                <div class="col mb-3">
+                  <label for="nome"></label>
+                  <input
+                    [(ngModel)]="usuario.nome"
+                    type="text"
+                    class="form-control"
+                    name="nome"
+                    id="nome"
+                    placeholder="Digite seu nome"
+                  />
+                </div>
+                <div class="col">
+                  <label for="usuario"></label>
+                  <input
+                    [(ngModel)]="usuario.usuario"
+                    type="text"
+                    class="form-control"
+                    name="usuario"
+                    id="usuario"
+                    placeholder="Digite seu e-mail"
+                  />
+                </div>
+              </div>
+
+              <div class="form-row">
+                <div class="col mb-3">
+                  <label for="cpf"></label>
+                  <input
+                    [(ngModel)]="usuario.cpf"
+                    type="text"
+                    class="form-control"
+                    name="cpf"
+                    id="cpf"
+                    placeholder="Insira o CPF ou CNPJ"
+                  />
+                </div>
+                <div class="col">
+                  <label for="tipo"></label>
+                  <select
+                    (change)="tipoUser($event)"
+                    type="text"
+                    class="form-control"
+                    name="tipo"
+                    id="tipo"
+                  >
+                    <option>Tipo do Usuário</option>
+                    <option value="vendedor">Vendedor(a)</option>
+                    <option value="comprador">Comprador(a)</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="form-row">
+                <div class="col mb-3">
+                  <label for="senha"></label>
+                  <input
+                    (input)="confirmSenha($event)"
+                    type="password"
+                    class="form-control"
+                    name="senha"
+                    id="senha"
+                    placeholder="Digite sua senha"
+                  />
+                </div>
+                <div class="col">
+                  <label for="confirmSenha"></label>
+                  <input
+                    [(ngModel)]="usuario.senha"
+                    type="password"
+                    class="form-control"
+                    name="confirmSenha"
+                    id="confirmSenha"
+                    placeholder="Confirme sua senha"
+                  />
+                </div>
+              </div>
+            </form>
+
+            <div class="form-group">
+              <label for="foto"></label>
+              <input
+                [(ngModel)]="usuario.foto"
+                class="form-control"
+                type="text"
+                name="foto"
+                id="foto"
+                placeholder="Insira o link da sua foto"
+              />
+            </div>
+
+            <div class="d-flex justify-content-center mt-5 mb-5">
+              <button
+                type="submit"
+                class="btn btn-laranja mr-4"
+                routerLink="/entrar"
+              >
+                Cancelar
+              </button>
+              <button type="submit" class="btn btn-verde" (click)="cadastrar()">
+                Cadastrar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Cadastrar -->
+    </div>
+  </div>
 </div>
