--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,8 +7,7 @@
 
       <ul class="navbar-nav d-flex align-items-center justify-content-center">
         <li class="nav-item active">
-            <img [src]="foto" onerror="this.src = 'assets/img/logo.jpg'" alt="imagem do usuario" class="rounded-circle" width="50">
-            <p class="nav-verde" href="#">Bem vinde, <span class="texto">{{nome}}</span></p>
+          <img src="https://i.imgur.com/fxDLdT1.png" onerror="this.src = 'assets/img/logo.jpg'" alt="imagem do usuario"  width="200">
             </li>
       </ul>
       <ul class="navbar-nav d-flex align-items-center ml-auto">
@@ -31,11 +30,12 @@
       <ul class="navbar-nav d-flex ml-auto align-items-center">
 
           <li class="nav-item dropdown fredoka">
-            <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-circle" aria-hidden="true"></i> ACESSO</a>
+
+            <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="https://i.imgur.com/1ENRWbA.jpg" onerror="this.src = 'assets/img/logo.jpg'" alt="imagem do usuario" class="rounded-circle mr-2" width="35"> ACESSO</a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#"routerLink="/login">LOGIN</a>
+              <a class="dropdown-item" href="#"routerLink="/login">LOGIN / CADASTRO</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#"routerLink="/login">CADASTRO</a>
+              <a class="dropdown-item" href="#"routerLink="/login">SAIR</a>
             </div>
           </li>
           <li class="nav-item pl-3">
