--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -31,52 +31,56 @@
       </a>
     </div>
     </div>
-        <div class="col-md-12 justify-content-center text-center d-flex my-5">
-              <a href="" routerLink="/produto" class="mx-5">Vender</a>
+        <div class="bg-warning col-md-12 justify-content-center text-center d-flex my-5">
+              <a routerLink="/produto" class="mx-5">
+              <img src="../../assets/img/hamburguer-vegano.jpg" width="100">Vender</a>
               <a href="" class="mx-5">Cliente</a>
               <a href="" class="mx-5">Entregador</a>
             </div>
+            </div>
         <!-- PRODUTOS -->
         <!-- jumbotron-->
-<div class="jumbotron jumbotron-fluid text-center verde text-white">
-  <div class="container">
-    <h1 class="display-4">Apoie o Veggieats</h1>
-    <p class="lead">Clique abaixo para entrar em contato e fazer parte do projeto.</p>
-  </div>
 
-  
-
-  <div class="row justify-content-center"><div class="col-md-6">
-    <button class="btn btn-light mr-2" data-toggle="modal" data-target="#apoiemodal">CLIQUE AQUI</button>
-      
-  </div></div>
-</div>
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container text-center">
+            <div class="row d-flex justify-content-center align-items-center">
+              <div class="col-md-9">
+                <div class="form-group mb-4 mt-2">
+                  <h1 class="display-4">Apoie o Veggieats</h1>
+                  <p class="lead mt-3">Seja um parceiro, colaborador, ou cliente fidelidade. Vamos ajudar a causa das micros, pequenas e médias empresas que produzem produtos focando na sustentabilidade, elaborando refeições Veganas e Vegetarianas!</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 <!-- jumbotron fim-->
 
   
-
-
+      <div class="container d-flex justify-content-center">
         <div class="row">
-          <div class="col-md-12 mt-5 justify-content-center text-center">
+          <div class="col-md-12 mt-2 justify-content-center text-center">
             <h1 class="text-center text-success">Categorias</h1>
             <a routerLink="/categoria" class="text-center justify-content-center">+ Adicionar Categoria</a>
             <p class="text-center">Aqui estão nossas categorias, selecione uma e vá conhecer nossos restaurantes!</p>
           </div>
         </div>
-        <div class="row mb-3 md-3 d-flex justify-content-center align-items-center">
-  <div class="col-md-3 px-2">
-    <div class="card " *ngFor="let item of listaCategorias" >
-      <img class="card-img-top" src={{item.foto}} alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">{{item.nome}}</h5>
-        <p class="card-text">{{item.descricao}}</p>
-        <a [routerLink]="['/categoria-edit', item.id]" class="mr-5" href="">Editar</a>
-        <a [routerLink]="['/categoria-delete', item.id]" href="">Apagar</a>
       </div>
-    </div>
-  </div>
+
+      <div class="container d-flex justify-content-center">
+        <div class="row mb-3 md-3">
+          <div class="card-columns">
+            <div class="card" *ngFor="let item of listaCategorias" >
+              <img class="card-img-top" src={{item.foto}} alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">{{item.nome}}</h5>
+                  <p class="card-text">{{item.descricao}}</p>
+                  <a [routerLink]="['/categoria-edit', item.id]" class="mr-5" href="">Editar</a>
+                  <a [routerLink]="['/categoria-delete', item.id]" href="">Apagar</a>
+                </div>
+              </div>
+          </div>
+        </div>
       </div>
-    </div>
   
 
 
