--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -1,98 +1,300 @@
+<div class="container fredoka">
+  <div class="container-fluid">
+    <div class="row d-flex justify-content-center">
+      <div class="col-md-02 mt-5 d-flex align-content-center">
+        <h1 class="text-center">Adicionar Produtos</h1>
+      </div>
+    </div>
+
+    <div class="row d-flex justify-content-center ml-1">
+      <div class="col-md-10">
+        <p class="text-center mt-2 mb-3">
+          cadastre mais produtos ao seu restaurante!
+        </p>
+
+        <div class="form-row">
+          <div class="col mb-2">
+            <label for="nome"></label>
+            <input
+              [(ngModel)]="produto.nome"
+              type="text"
+              class="form-control"
+              name="nome"
+              id="nome"
+              placeholder="Qual seu produto?"
+            />
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="col">
+            <label for="texto"></label>
+            <textarea
+              [(ngModel)]="produto.descricao"
+              type="text"
+              class="form-control"
+              name="descricao"
+              id="descricao"
+              rows="3"
+              placeholder="O que contem no seu produto? Descreve aí!"
+            >
+            </textarea>
+          </div>
+        </div>
+
+        <div class="form-row">
+          <div class="col mb-2">
+            <label for="estoque"></label>
+            <input
+              [(ngModel)]="produto.estoque"
+              type="number"
+              class="form-control"
+              name="estoque"
+              id="estoque"
+              placeholder="Informe seu estoque:"
+            />
+          </div>
+
+          <div class="col">
+            <label for="tipoProduto"></label>
+            <select
+              type="text"
+              class="form-control"
+              name="tipoProduto"
+              id="tipoProduto"
+            >
+              <option>Tipo de Produto</option>
+              <option value="vegano">Vegano</option>
+              <option value="vegetariano">Vegetariano</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="form-row">
+            <div class="col-md-3 mb-3">
+              <label for="preco"></label>
+              <input
+                [(ngModel)]="produto.preco"
+                type="number"
+                class="form-control"
+                name="preco"
+                id="preco"
+                placeholder="Qual o preço?">
+            </div>
+
+              <div class="col-md-3">
+                <label for="categoria"></label>
+                <select
+                  type="text"
+                  class="form-control"
+                  name="categoria"
+                  id="categoria"
+                  [(ngModel)]="idCategoria"
+                  (change)="findByIdCategoria()">
+                  <option
+                    *ngFor="let item of listaCategorias"
+                    value="{{item.id}}">
+                    {{item.nome}}
+                  </option>
+                </select>
+              </div>
+
+              <div class="col-md-3">
+                <label for="foto"></label>
+                <input
+                  class="form-control"
+                  type="text"
+                  name="foto"
+                  id="foto"
+                  placeholder="Insira o link da foto:">
+              </div>
+            </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+<div class="d-flex justify-content-center mt-5 mb-5">
+  <button type="submit" class="btn btn-outline-secondary mr-4" routerLink="/inicio">
+    Cancelar
+  </button>
+  <button class="btn btn-outline-success" (click)="publicar()">
+    Cadastrar
+  </button>
+</div>
+
+
+<hr>
+
+
 <div class="container-fluid">
-    <div class="row bg bg-secondary">
-        <div class="col-md-12 text-light">
-            <a routerLink="/inicio" class="text-light text-left">
-                <i class="fa fa-angle-double-left" aria-hidden="true"></i>
-                Início
-            </a>
-
-            <h1 class="display-1 text-center">Produtos</h1>
-            <h5 class="text-center">Cadastre um novo produto</h5>
-
-            <div class="row d-flex justify-content-center">
-                <div class="col-md-3">
-                    <div class="form-group">
-                        <input [(ngModel)]="produto.nome" type="text" class="form-control mt-3" id="nome"
-                            placeholder="Digite o nome do produto">
-                        <div class="form-group">
-                            <label for="texto">Descrição</label>
-                            <textarea [(ngModel)]="produto.descricao" name="texto" class="form-control" id="texto"
-                                rows="3"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <input [(ngModel)]="produto.foto" type="text" class="form-control mt-3" id="foto"
-                                placeholder="Digite a URL da foto do produto">
-                        </div>
-                        <div class="form-group">
-                            <input [(ngModel)]="produto.tipoProduto" type="text" class="form-control mt-3" id="tipo"
-                                placeholder="Digite o tipo do produto">
-                        </div>
-                        <div class="form-group">
-                            <input [(ngModel)]="produto.estoque" type="text" class="form-control mt-3" id="estoque"
-                                placeholder="Digite a quantidade no estoque">
-                        </div>
-                        <div class="form-group">
-                            <input [(ngModel)]="produto.preco" type="text" class="form-control mt-3" id="preco"
-                                placeholder="Digite o preço do produto">
-                        </div>
-                        <div class="form-group">
-                            <label for="texto">Escolha uma categoria</label>
-                            <select class="form-control" name="categoria" id="categoria" [(ngModel)]="idCategoria"
-                                (change)="findByIdCategoria()">
-                                <option *ngFor="let item of listaCategorias" value="{{item.id}}">{{item.nome}}</option>
-                            </select>
-                        </div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <button class="btn btn-light" (click)="publicar()">Cadastrar</button>
-
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-02 mt-5 d-flex align-content-center">
+      <h1 class="text-center mb-5">Todos os Produtos</h1>
     </div>
-    <div class="container">
-        <div class="row mt-5 mb-3">
-            <div class="col-md-12">
-                <h2 class="text-center">
-                    Todos os produtos
-                </h2>
-            </div>
-        </div>
-        <div class="row mt-3 mb-3 d-flex justify-content-center">
-            <div class="col-md-6">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Descrição</th>
-                            <th scope="col" class="text-right">Modificações</th>
+  </div>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr *ngFor="let item of listaProdutos; index as id">
-                            <th>{{item.id}}</th>
-                            <td>{{item.nome}}</td>
-                            <td>{{item.descricao}}</td>
-                            <td>{{item.preco}}</td>
-                            <td>{{item.estoque}}</td>
-                            <td>{{item.tipoProduto}}</td>
-                            <td>{{item.foto}}</td>
-                            <td>{{item.categoria.nome}}</td>
-                            <td>{{item.usuario.nome}}</td>
 
-                            <td class="d-flex justify-content-end">
-                                <button class="btn btn-info mr-3"
-                                    [routerLink]="['/produto-edit',item.id]">Editar</button>
-                                <button class="btn btn-danger"
-                                    [routerLink]="['/produto-delete',item.id]">Apagar</button>
-                            </td>
-                        </tr>
+  <div class="row d-flex justify-content-center ml-2 mr-2 mb-3">
+    <div class="col-md-10">
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col" class="text-center">#</th>
+              <th scope="col" class="text-center">Nome</th>
+              <th scope="col" class="text-center">Descrição</th>
+              <th scope="col" class="text-center">Preço</th>
+              <th scope="col" class="text-center">Estoque</th>
+              <th scope="col" class="text-center">Categoria</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let item of listaProdutos; index as id">
+              <th>{{ item.id }}</th>
+              <td>{{ item.nome }}</td>
+              <td>{{ item.descricao }}</td>
+              <td>{{ item.preco }}</td>
+              <td>{{ item.estoque }}</td>
+              <td>{{ item.categoria.nome }}</td>
 
-                    </tbody>
-                </table>
-            </div>
-        </div>
+              <td class="d-flex justify-content-end">
+                <button
+                  class="btn btn-outline-secondary mr-3"
+                  [routerLink]="['/produto-edit', item.id]"
+                >Editar
+                </button>
+                <button
+                  class="btn btn-outline-danger"
+                  [routerLink]="['/produto-delete', item.id]"
+                >
+                  Apagar
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
+  </div>
+</div>
+
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="row d-flex justify-content-center">
+        <div class="col-md-3">
+          <div class="form-group">
+            <input
+              [(ngModel)]="produto.nome"
+              type="text"
+              class="form-control mt-3"
+              id="nome"
+              placeholder="Digite o nome do produto"
+            />
+            <div class="form-group">
+              <label for="texto">Descrição</label>
+              <textarea
+                [(ngModel)]="produto.descricao"
+                name="texto"
+                class="form-control"
+                id="texto"
+                rows="3"
+                placeholder="Digite aqui o que contem no seu produto..."
+              ></textarea>
+            </div>
+            <div class="form-group">
+              <input
+                [(ngModel)]="produto.foto"
+                type="text"
+                class="form-control mt-3"
+                id="foto"
+                placeholder="Digite a URL da foto do produto"
+              /.
+
+            </div>
+            <div class="form-group">
+              <label for="texto">Selecione o tipo de produto:</label>
+              <select
+                class="form-control"
+                name="tipoProduto"
+                id="tipoProduto"
+                [(ngModel)]="produto.tipoProduto"
+                >
+                 <option
+                  >Selecione uma opção</option>
+                  <option
+                  value="vegano"> Vegano</option>
+                  <option
+                  value="vegetariano"> Vegetariano</option>
+                 
+                  
+                
+              </select>
+            </div>
+            <div class="form-group">
+              <input
+                [(ngModel)]="produto.estoque"
+                type="text"
+                class="form-control mt-3"
+                id="estoque"
+                placeholder="Digite a quantidade no estoque"
+              />
+            </div>
+            <div class="form-group">
+              <input
+                [(ngModel)]="produto.preco"
+                type="text"
+                class="form-control mt-3"
+                id="preco"
+                placeholder="Digite o preço do produto"
+              />
+            </div>
+            <div class="form-group">
+              <label for="texto">Escolha uma categoria</label>
+              <select
+                class="form-control"
+                name="categoria"
+                id="categoria"
+                [(ngModel)]="idCategoria"
+                (change)="findByIdCategoria()"
+              >
+                <option
+                  *ngFor="let item of listaCategorias"
+                  value="{{ item.id }}"
+                >
+                  {{ item.nome }}
+                </option>
+              </select>
+            </div>
+            <div class="d-flex justify-content-center mb-3">
+              <button class="btn btn-light" (click)="publicar()">
+                Cadastrar
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--  -->
+
