--- a/src/app/restaurantes/restaurantes.component.css
+++ b/src/app/restaurantes/restaurantes.component.css
@@ -17,3 +17,17 @@ p {
 .espaco {
   padding: 2px;
 }
+
+.card:hover {
+  color: var(--marromPadrao);
+  border-color: var(--marromClaro);
+  transform: translate3d(0, 3px, 0);
+}
+
+.card {
+  color: var(--laranjaPadrao);
+  border:solid 3px;
+  border-color: var(--laranjaClaro);
+  border-radius: 0.50rem;
+  transition: 0.7s ease;
+}
