--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -19,7 +19,7 @@
 
     <div class="row mt-4">
       <div class="col d-flex justify-content-center">
-        <h1>EQUIPE</h1>
+        <h1>EQUIPE DE DESENVOLVIMENTO</h1>
       </div>
     </div>
     <div class="card-deck mt-3">
