--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -13,7 +13,7 @@
       </ul>
       <ul class="navbar-nav d-flex align-items-center ml-auto">
         <li class="nav-item active p-1 fredoka">
-            <a class="nav-verde" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
+        <a class="nav-verde" href="#">INÍCIO<span class="sr-only">(página atual)</span></a>
           </li>
           <li class="nav-item p-1 fredoka">
             <a class="nav-verde" href="#" routerLink='/restaurantes'>RESTAURANTES</a>
@@ -30,17 +30,21 @@
 
       <ul class="navbar-nav d-flex ml-auto align-items-center">
 
-          <li class="nav-item dropdown fredoka">
-
-            <a class="nav-conta dropdown-toggle fs-16" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="https://i.imgur.com/1ENRWbA.jpg" onerror="this.src = 'assets/img/logo.jpg'" alt="imagem do usuario" class="rounded-circle mr-2" width="35"> ACESSO</a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#"routerLink="/login">LOGIN / CADASTRO</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#"routerLink="/login">SAIR</a>
+        <div class="col-6 d-flex justify-content-center m-0 p-0"
+        >
+            <div class="d-flex align-items-center">
+              <div class="p-0 mr-2">
+                <button class=" ml-2" routerLink="/login">Entrar</button>
+              </div>
+              <div class=" mr-2">
+              </div>
+              <div class="p-0">
+                <button class=" btn-block mr-5" routerLink="/login"> Criar conta</button>
+              </div>
             </div>
-          </li>
+      </div>
           <li class="nav-item pl-3">
-            <a class="m-0 font-weight-bold fs-16 aumentar"> <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></a>
+            <a class="ml-5 font-weight-bold fs-16 aumentar"> <i class="fa fa-shopping-bag fa-2x" aria-hidden="true"></i></a>
           </li>
       </ul>
     </div>
