--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -4,7 +4,7 @@
           <div class="row">
               <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                   <div class="logo-widget footer-widget">
-                      <figure class="logo-box"><a href="#"><img src="https://i.imgur.com/fxDLdT1.png" alt=""></a></figure>
+                      <figure class="logo-box"><a href="#"><img src="../../assets/img/logoVeg.png" alt=""></a></figure>
                       <div class="text">
                           <p>Lorem ipsum dolor amet consectetur adi pisicing elit sed eiusm tempor incididunt ut labore dolore magna aliqua enim ad minim veniam quis.nostrud exercita.laboris nisi ut aliquip ea commodo conse quatuis aute irure.</p>
                       </div>
@@ -16,7 +16,7 @@
                       </ul>
                   </div>
               </div>
-              <div class="col-lg-3 col-md-6 col-sm-12 offset-lg-2 footer-column">
+              <div class="col-lg-3 col-md-6 col-sm-12 offset-lg-1 footer-column">
                   <div class="service-widget footer-widget">
                       <div class="footer-title">Serviços</div>
                       <ul class="list">
