implementacao botao carrinho

--- a/src/app/carrinho/carrinho.component.html
+++ b/src/app/carrinho/carrinho.component.html
@@ -9,13 +9,13 @@
             <div class="col-3 p-0 m-0">
               <img [src]="item.foto" alt="" class="produtoFoto rounded" >
             </div>
-            <div class="col-6 d-flex flex-column justify-content-center">
+            <!-- <div class="col-6 d-flex flex-column justify-content-center">
               <div class="row">
                 <h5 class=''>{{item.nome}}</h5>
                 <p>Plataforma: {{item.categoria.nome}}</p>
                 <p class='m-0'>Publisher: Ubisoft</p>
               </div>
-            </div>
+            </div> -->
             <div class="col-3">
               <div class="row d-flex justify-content-center align-items-center h-100">
                 <h5 class="text-center"> {{item.preco | currency: "BRL"}}</h5>
