--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="card-deck mt-3">
       <div class="card bg">
-        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle" src="https://i.imgur.com/4ode6Ni.jpg" alt="Imagem de capa do card">
         <div class="card-body text-center">
           <h5 class="card-title">GEORDAN</h5>
           <div>
@@ -37,7 +37,7 @@
       </div>
 
       <div class="card bg">
-        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle" src="https://i.imgur.com/JGur4Pg.jpg" alt="Imagem de capa do card">
         <div class="card-body text-center">
           <h5 class="card-title">JENNY GRITTI</h5>
           <button class="g mr-3"><a href="https://github.com/jennygritti"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
@@ -47,7 +47,7 @@
       </div>
 
       <div class="card bg">
-        <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
+        <img class="card-img-top rounded-circle" src="https://i.imgur.com/ToRw9Pt.jpg" alt="Imagem de capa do card">
         <div class="card-body text-center">
           <h5 class="card-title">KARINE</h5>
           <button class="g mr-3"><a href="https://github.com/karinecordeiro"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="card bg">
-      <img class="card-img-top rounded-circle" src="../../assets/img/veggieats7.png" alt="Imagem de capa do card">
+      <img class="card-img-top rounded-circle" src="https://i.imgur.com/BW4Edux.jpg" alt="Imagem de capa do card">
       <div class="card-body text-center">
         <h5 class="card-title">RAPHAELA</h5>
         <button class="g mr-3"><a href="https://github.com/rphaela" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
