--- a/src/app/edit/categoria-edit/categoria-edit.component.html
+++ b/src/app/edit/categoria-edit/categoria-edit.component.html
@@ -8,9 +8,19 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="descricao">Descrição</label>
-                <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.nome">
-                <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.descricao">
-                <input type="text" class="form-control" id="descricao" [(ngModel)]="categoria.foto">
+                <div class="row d-flex justify-content-center">
+                  <div class="col-md-12">
+                      <div class="form-group">
+                          <input [(ngModel)]="categoria.nome" type="text" class="form-control mt-3" id="descricao" placeholder="Digite o nome da categoria">
+                          <div class="form-group">
+                              <input [(ngModel)]="categoria.descricao" type="text" class="form-control mt-3" id="descricao" placeholder="Digite a descrição da categoria">
+                              <div class="form-group">
+                                  <input [(ngModel)]="categoria.foto" type="text" class="form-control mt-3" id="descricao" placeholder="Digite a URL da foto da categoria">
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="d-flex justify-content-center">
                 <button class="btn btn-danger mr-4" routerLink="/categoria">Cancelar</button>
@@ -19,3 +29,4 @@
         </div>
     </div>
 </div>
+
