--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -31,13 +31,20 @@
       </a>
     </div>
     </div>
-        <div class="bg-warning col-md-12 justify-content-center text-center d-flex my-5">
-              <a routerLink="/produto" class="mx-5">
-              <img src="../../assets/img/hamburguer-vegano.jpg" width="100">Vender</a>
-              <a href="" class="mx-5">Cliente</a>
-              <a href="" class="mx-5">Entregador</a>
-            </div>
-            </div>
+    </div>
+
+    <!-- todo: link para vender e entregar -->
+      <div class="container  mt-4 mb-4">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-5">
+            <a data-toggle="modal" data-target="#vender"><img src="https://i.imgur.com/8Z2V3rl.jpg" class="img-fluid" ></a>
+          </div>
+          <div class="col-md-5">
+            <a data-toggle="modal" data-target="#entregar"><img src="https://i.imgur.com/GJpyfOf.jpg" class="img-fluid"></a>
+          </div>
+          </div>
+        </div>
+
         <!-- PRODUTOS -->
         <!-- jumbotron-->
 
@@ -45,9 +52,9 @@
           <div class="container text-center">
             <div class="row d-flex justify-content-center align-items-center">
               <div class="col-md-9">
-                <div class="form-group mb-4 mt-2">
-                  <h1 class="display-4">Apoie o Veggieats</h1>
-                  <p class="lead mt-3">Seja um parceiro, colaborador, ou cliente fidelidade. Vamos ajudar a causa das micros, pequenas e médias empresas que produzem produtos focando na sustentabilidade, elaborando refeições Veganas e Vegetarianas!</p>
+                <div class="form-group mb-4 mt-4">
+                  <h1 class="display-5 fredoka">APOIE O VEGGIEATS</h1>
+                  <p class="lead mt-3 mb-5">Seja um parceiro, colaborador, ou cliente fidelidade. Vamos ajudar a causa das micros, pequenas e médias empresas que produzem produtos focando na sustentabilidade, elaborando refeições Veganas e Vegetarianas!</p>
                 </div>
               </div>
             </div>
@@ -55,33 +62,38 @@
         </div>
 <!-- jumbotron fim-->
 
-  
+
       <div class="container d-flex justify-content-center">
         <div class="row">
           <div class="col-md-12 mt-2 justify-content-center text-center">
-            <h1 class="text-center text-success">Categorias</h1>
-            <a routerLink="/categoria" class="text-center justify-content-center">+ Adicionar Categoria</a>
-            <p class="text-center">Aqui estão nossas categorias, selecione uma e vá conhecer nossos restaurantes!</p>
+            <h1 class="text-center corroxo fredoka">CATEGORIAS</h1>
+            <div class="clicavel">
+              <a routerLink="/categoria" class="text-center justify-content-center corroxo">+ Adicionar Categoria</a>
+            </div>
+            <p class="text-center corMarrom">Essas são nossas categorias disponiveis para pedir e abusar!</p>
           </div>
         </div>
       </div>
-
-      <div class="container d-flex justify-content-center">
-        <div class="row mb-3 md-3">
-          <div class="card-columns">
-            <div class="card" *ngFor="let item of listaCategorias" >
-              <img class="card-img-top" src={{item.foto}} alt="Card image cap">
+      <div class="container">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-2" *ngFor="let item of listaCategorias">
+            <img class="card-img-top" src={{item.foto}} alt="Card image cap">
                 <div class="card-body">
                   <h5 class="card-title">{{item.nome}}</h5>
                   <p class="card-text">{{item.descricao}}</p>
-                  <a [routerLink]="['/categoria-edit', item.id]" class="mr-5" href="">Editar</a>
-                  <a [routerLink]="['/categoria-delete', item.id]" href="">Apagar</a>
-                </div>
-              </div>
+                  <div>
+                    <button>
+                      <a [routerLink]="['/categoria-edit', item.id]" href="">Editar</a>
+                    </button>
+                    <button>
+                      <a [routerLink]="['/categoria-delete', item.id]" href="">Apagar</a>
+                    </button>
+                  </div>
+
+
           </div>
         </div>
       </div>
-  
 
 
 <!-- Modal -->
@@ -101,3 +113,49 @@
         </div>
       </div>
     </div>
+  </div>
+      </div>
+
+    <!-- !MODAL PARA VENDER-->
+
+<!-- Modal -->
+<div class="modal fade" id="vender" tabindex="-1" role="dialog" aria-labelledby="Titulovender" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="Titulovender">VENDA CONOSCO!!!</h5>
+        <button type="button" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" data-dismiss="modal">
+        <p> Se você produz algum produto <span>VEGANO</span> ou <span>VEGETARINO</span>, ESTE É O LUGAR CERTO!</p>
+        <p> Basta se cadastrar como: (Tipo do Usuário: Vendedor(a))</p>
+        <p> Acesso o link <a routerLink="/login" class="verde"> aqui </a> para se cadastrar </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ! MODAL PARA ENTREGAR  -->
+<!-- Modal -->
+<div class="modal fade" id="entregar" tabindex="-1" role="dialog" aria-labelledby="Tituloentregar" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="Tituloentregar">ENTREGE PARA NÓS!!!</h5>
+        <button type="button" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p> Se você tem CNH em dia, deixe seu email aqui embaixo para que entremos em contato com você para analise!</p>
+        <label for="titulo">E-mail:</label>
+            <input name="titulo" type="text" class="form-control" id="titulo" placeholder="exemplo@exemplo.com ">
+            <div class="modal-footer">
+              <button type="button" class="claro" (click)="enviar()" data-dismiss="modal">ENVIAR</button>
+            </div>
+      </div>
+    </div>
+  </div>
+</div>
