--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -2,38 +2,44 @@
   <div class="container">
       <div class="footer-content">
           <div class="row">
-              <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
+              <div class="col-lg-4 col-md-6 col-sm-12 footer-column d-flex justify-content-center">
                   <div class="logo-widget footer-widget">
-                      <figure class="logo-box"><a href="#"><img src="../../assets/img/logoVeg.png" alt=""></a></figure>
-                      <div class="text">
+                      <figure class="logo-box"><a href="#"><img src="https://i.imgur.com/h82uXHM.png" alt=""  width="150px"></a></figure>
+                      <div class="texto text-justify">
                           <p>Lorem ipsum dolor amet consectetur adi pisicing elit sed eiusm tempor incididunt ut labore dolore magna aliqua enim ad minim veniam quis.nostrud exercita.laboris nisi ut aliquip ea commodo conse quatuis aute irure.</p>
                       </div>
-                      <ul class="footer-social">
-                          <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                          <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                          <li><a href="#"><i class="fab fa-vimeo-v"></i></a></li>
-                          <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
+
+                      <!-- ! REDES SOCIAIS -->
+                      <div>
+                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+                      </div>
+                    </div>
+                </div>
+
+                <!-- ! SERVIÇOS -->
               <div class="col-lg-3 col-md-6 col-sm-12 offset-lg-1 footer-column">
                   <div class="service-widget footer-widget">
-                      <div class="footer-title">Serviços</div>
-                      <ul class="list">
-                          <li><a href="#">Water Surve</a></li>
-                          <li><a href="#">Education for all</a></li>
-                          <li><a href="#">Food Serving</a></li>
-                          <li><a href="#">Animal Saves</a></li>
-                          <li><a href="#">Help Orphan</a></li>
+                      <div class="footer-title">SERVIÇOS</div>
+                      <ul class="texto">
+                          <li><a href="#">Vendas</a></li>
+                          <li><a href="#">Entregas</a></li>
+                          <li><a href="#">Parceiros</a></li>
+                          <li><a href="#">Fidelidade</a></li>
                       </ul>
                   </div>
               </div>
+
+              <!-- !CONTATO -->
               <div class="col-lg-3 col-md-6 col-sm-12 footer-widget">
                   <div class="contact-widget footer-widget">
-                      <div class="footer-title">Contato</div>
-                      <div class="text">
+                      <div class="footer-title">CONTATO</div>
+                      <div class="texto">
                           <p>Lorem Ipsum, simply dummy text, printing, Chandigarh</p>
-                          <p>+2(784) 1223323</p>
+                          <p> + 00 (00) 00000-00000</p>
                           <p>info@example.com</p>
                       </div>
                   </div>
@@ -43,18 +49,18 @@
   </div>
 </footer>
 <!-- main-footer end -->
-<div class="footer-bottom">
-  <div class="container">
+
+        <!-- ! SEGUNDO FOOTER -->
+  <div class="container-fluid footer d-flex justify-content-center text-center">
       <div class="row">
-          <div class="col-lg-6 col-md-6 col-sm-12 column">
-              <div class="copyright"><a href="#">Anup</a> &copy; 2019 All Right Reserved</div>
+          <div class="col-md-6">
+              <div class="texto"><a href="#">Veggieats</a> &copy; 2022 Todos os direitos reservados</div>
           </div>
-          <div class="col-lg-6 col-md-6 col-sm-12 column">
-              <ul class="footer-nav">
-                  <li><a href="#">Terms of Service</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
-              </ul>
+          <div class="col-md-3 texto">
+                  <a href="#">Termos e Serviços</a>
+          </div>
+          <div class="col-md-3 texto text-center">
+                  <a href="#">Politica de privacidade</a>
           </div>
       </div>
   </div>
-</div>
