--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 
-<div class="container">
+<div class="container mt-1">
   <div class="col-md-12 main-content">
 
     <!-- CARROSEL -->
@@ -9,16 +9,20 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="../../assets/img/cafeDaManha.jpg" alt="First slide">
+          <img class="d-block w-100" src="https://i.imgur.com/YhBLALW.jpg" alt="First slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="../../assets/img/cafeDaManha.jpg" alt="Second slide">
+          <img class="d-block w-100" src="https://i.imgur.com/QXyRaaX.jpg" alt="Second slide">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="../../assets/img/cafeDaManha.jpg" alt="Third slide">
+          <img class="d-block w-100" src="https://i.imgur.com/M2lqTq2.jpg" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="https://i.imgur.com/dklSAli.jpg" alt="Fourth slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -124,14 +128,14 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="Titulovender">VENDA CONOSCO!!!</h5>
-        <button type="button" data-dismiss="modal" aria-label="Fechar">
+        <button type="button" data-dismiss="modal" aria-label="Fechar" class="bt">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body" data-dismiss="modal">
         <p> Se você produz algum produto <span>VEGANO</span> ou <span>VEGETARINO</span>, ESTE É O LUGAR CERTO!</p>
         <p> Basta se cadastrar como: (Tipo do Usuário: Vendedor(a))</p>
-        <p> Acesso o link <a routerLink="/login" class="verde"> aqui </a> para se cadastrar </p>
+        <p> Acesse o link <a routerLink="/login" class="verde ml-1 mr-1">aqui</a> para se cadastrar.</p>
       </div>
     </div>
   </div>
@@ -144,7 +148,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="Tituloentregar">ENTREGE PARA NÓS!!!</h5>
-        <button type="button" data-dismiss="modal" aria-label="Fechar">
+        <button type="button" data-dismiss="modal" aria-label="Fechar" class="bt">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
