--- a/src/app/rodape/rodape.component.html
+++ b/src/app/rodape/rodape.component.html
@@ -12,10 +12,10 @@
                       <!-- ! REDES SOCIAIS -->
                       <div>
                         <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
-                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
-                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
-                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
-                        <button class="g mr-3"><a href="https://github.com/Veggieats"  target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://www.instagram.com/veggi.eatss/"  target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://twitter.com/Veggieatss"  target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://www.facebook.com/people/Veggieats-Veg/100081557280621/"  target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></button>
+                        <button class="g mr-3"><a href="https://www.youtube.com/channel/UCiaKWt5tRKkq0niWsGi4NGQ"  target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></button>
                       </div>
                     </div>
                 </div>
