alteracao link localhost para heroku

--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -103,7 +103,7 @@
             <a [routerLink]="['/produto-edit', usuario.id]" class="btn btn-outline-secondary mr-3 mt-3">Editar</a>
             <a [routerLink]="['/produto-delete', usuario.id]" class="btn btn-outline-danger mr-3 mt-3">Apagar</a>
 
-            <button class="btn btn-outline-info mt-3" (click)="getProdById(produto.id)">COMPRAR</button>
+            <button class="btn btn-outline-info mt-3" (click)="getProdById(item.id)">COMPRAR</button>
 
           </div>
       </div>
